updted integration instruction

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <div class="dtm-cell-body">
             <h1>Komito at a Glance</h1>
             <p class="txt-desc">
-              The Komito is a tool to unlock the power of digital analytics.
-              It enriches analytics data with important information about
-              visitor's behavior.
+              Komito is enhancement for the most popular analytics software.
+              It unlocks power of digital analytics with additional insights
+              about visitor's behavior.
             </p>
           </div>
         </div>
