updted integration instruction

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="dtm-cell-body">
             <h1>Komito at a Glance</h1>
             <p class="txt-desc">
-              Komito is enhancement for the most popular analytics software.
+              Komito is an enhancement for the most popular analytics software.
               It unlocks power of digital analytics with additional insights
               about visitor's behavior.
             </p>
