--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="og:title" content="Komito">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-<meta name="description" content="The Komito is a tool to unlock the power of digital analytics.">
-<meta name="og:description" content="The Komito is a tool to unlock the power of digital analytics.">
+<meta name="description" content="Komito is an enhancement for the most popular analytics software.">
+<meta name="og:description" content="Komito is an enhancement for the most popular analytics software.">
 <meta name="og:image" content="http://dtm.io/images/komito-logo-600x455.png">
 <meta itemprop="image" content="http://dtm.io/images/komito-logo-120x90.png">
 <meta name="twitter:card" content="summary">
