--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="description" content="Komito is an enhancement for the most popular analytics software.">
 <meta name="og:description" content="Komito is an enhancement for the most popular analytics software.">
-<meta name="og:image" content="http://dtm.io/images/komito-logo-600x455.png">
-<meta itemprop="image" content="http://dtm.io/images/komito-logo-120x90.png">
+<meta name="og:image" content="/Komito/images/komito-logo-600x455.png">
+<meta itemprop="image" content="/Komito/images/komito-logo-120x90.png">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@vpodk">
 <meta name="twitter:url" content="http://datamart.github.io/Komito/">
@@ -17,7 +17,7 @@
 <link rel="canonical" href="http://datamart.github.io/Komito/">
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
-<link href="/Komito/stylesheets/styles.css" rel="stylesheet">
+<link href="/Komito/styles.css" rel="stylesheet">
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
 <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
 </head>
