--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <li>Social widgets</li>
             </ul>
             <a href="/Komito/integration/#features" class="kc-features"
-               title="See all Komito features"><i>See all features</i> →</a>
+               title="See all Komito features."><i>See all features</i> →</a>
           </div>
         </div>
         <div class="dtm-grid-cell cell-span3">
@@ -109,11 +109,13 @@
 
       <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
         <div class="dtm-grid-cell cell-span8 cell-offset2">See <a
+             title="See step-by-step Komito integration instructions."
              href="/Komito/integration/">integration</a>
-             example &nbsp;-OR-&nbsp; &nbsp;<a
-             title="Download Komito" class="dtm-button clr-red"
-             href="//github.com/Datamart/Komito/tree/master"><span>
-             Get Komito Now</span></a>
+             &nbsp;-OR-&nbsp; &nbsp;<a
+             title="In case of any questions, suggestions or comments, please contact Komito support team."
+             class="dtm-button clr-red"
+             href="mailto:komito-support@dtm.io"><span>
+             Contact for support</span></a>
         </div>
       </div>
     </div>
