--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <nav>
         <ul class="dtm-nav">
           <li class="dtm-nav-main-current"><a href='/Komito/'
-              title='Komito Overview'>Overview</a></li>
+            title='Komito Overview Page'>Overview</a></li>
           <li><a href='/Komito/integration/'
-                 title='Komito Integration'>Integration</a></li>
+            title='Komito Integration Instruction'>Integration</a></li>
         </ul>
       </nav>
     </div>
@@ -73,8 +73,8 @@
               <li>Form submissions</li>
               <li>Social widgets</li>
             </ul>
-            <a href="/Komito/integration/#features" class="kc-features"
-               title="See all Komito features."><i>See all features</i> →</a>
+            <a href="/Komito/integration/" class="kc-features"
+               title="See all Komito advanced mertics."><i>See all metrics</i> →</a>
           </div>
         </div>
         <div class="dtm-grid-cell cell-span3">
