--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <div class="dtm-grid-cell cell-span6">
       <nav>
         <ul class="dtm-nav">
-          <li class="dtm-nav-main-current"><a href='/Komito/'
-            title='Komito Overview Page'>Overview</a></li>
-          <li><a href='/Komito/integration/'
-            title='Komito Integration Instruction'>Integration</a></li>
+          <li class="dtm-nav-main-current"><a href="/Komito/"
+            title="Komito Overview Page">Overview</a></li>
+          <li><a href="/Komito/integration/"
+            title="Komito Integration Instruction">Integration</a></li>
         </ul>
       </nav>
     </div>
