--- a/integration/index.html
+++ b/integration/index.html
@@ -39,9 +39,9 @@
     <div class="dtm-grid-cell cell-span6">
       <nav>
         <ul class="dtm-nav">
-          <li><a href='/Komito/' title='Komito Overview'>Overview</a></li>
-          <li class="dtm-nav-main-current"><a href='/Komito/integration/'
-              title='Komito Integration'>Integration</a></li>
+          <li><a href="/Komito/" title="Komito Overview Page">Overview</a></li>
+          <li class="dtm-nav-main-current"><a href="/Komito/integration/"
+              title="Komito Integration Instruction">Integration</a></li>
         </ul>
       </nav>
     </div>
@@ -158,9 +158,9 @@
     </div>
     <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
       <div class="dtm-grid-cell cell-span8 cell-offset2">
-        <a title="Download Komito"
+        <a title="Get Komito Source Code."
            class="dtm-button clr-red"
-           href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Now</span></a>
+           href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Source Code</span></a>
       </div>
     </div>
   </div>
