--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div class="dtm-cell-body dtm-logo">
         <a href="/Komito/"
            class="dtm-ext-logo"
-           title="Komito"><img 
-           src="http://dtm.io/images/komito-logo-site.png"
+           title="Komito"><img
+           src="/Komito/images/komito-logo-48x48.png"
            alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
         <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span
                class="dtm-nav-lines"></span></label>
@@ -40,9 +40,9 @@
       <nav>
         <ul class="dtm-nav">
           <li class="dtm-nav-main-current"><a href="/Komito/"
-            title="Komito Overview Page">Overview</a></li>
+            title="Komito overview page.">Overview</a></li>
           <li><a href="/Komito/integration/"
-            title="Komito Integration Instruction">Integration</a></li>
+            title="Step-by-step Komito integration instructions.">Integration</a></li>
         </ul>
       </nav>
     </div>
@@ -110,7 +110,7 @@
       <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
         <div class="dtm-grid-cell cell-span8 cell-offset2">See <a
              title="See step-by-step Komito integration instructions."
-             href="/Komito/integration/">integration</a>
+             href="/Komito/integration/">integration instructions</a>
              &nbsp;-OR-&nbsp; &nbsp;<a
              title="In case of any questions, suggestions or comments, please contact Komito support team."
              class="dtm-button clr-red"
