--- a/integration/index.html
+++ b/integration/index.html
@@ -29,8 +29,8 @@
       <div class="dtm-cell-body dtm-logo">
         <a href="/Komito/"
            class="dtm-ext-logo"
-           title="Komito"><img 
-           src="http://dtm.io/images/komito-logo-site.png"
+           title="Komito"><img
+           src="/Komito/images/komito-logo-48x48.png"
            alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
         <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span
                class="dtm-nav-lines"></span></label>
@@ -39,9 +39,10 @@
     <div class="dtm-grid-cell cell-span6">
       <nav>
         <ul class="dtm-nav">
-          <li><a href="/Komito/" title="Komito Overview Page">Overview</a></li>
+          <li><a href="/Komito/"
+            title="Komito overview page.">Overview</a></li>
           <li class="dtm-nav-main-current"><a href="/Komito/integration/"
-              title="Komito Integration Instruction">Integration</a></li>
+            title="Step-by-step Komito integration instructions.">Integration</a></li>
         </ul>
       </nav>
     </div>
