--- a/integration/index.html
+++ b/integration/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-<title itemprop="name">Komito - Integration</title>
-<meta name="og:title" content="Komito - Integration">
+<title itemprop="name">Komito Integration Instructions</title>
+<meta name="og:title" content="Komito Integration Instructions">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="description" content="Komito is an enhancement for the most popular analytics software.">
