--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
             <p class="txt-desc" style="text-align:center">
-              * Caring about privacy and security, the Komito
+              • Caring about privacy and security, the Komito
               <b>does not store</b> any data.
             </p>
           </div>
