--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
              title="See step-by-step Komito integration instructions."
              href="/Komito/integration/">integration instructions</a>
              &nbsp;-OR-&nbsp; &nbsp;<a
-             title="In case of any questions, suggestions or comments, please contact Komito support team."
+             title="For all questions, suggestions, and comments, please contact Komito support team."
              class="dtm-button clr-red"
              href="mailto:komito-support@dtm.io"><span>
-             Contact for support</span></a>
+             Contact support team</span></a>
         </div>
       </div>
     </div>
