--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
              title="For all questions, suggestions, and comments, please contact Komito support team."
              class="dtm-button clr-red"
              href="mailto:komito-support@dtm.io"><span>
-             Contact support team</span></a>
+             Ask support team</span></a>
         </div>
       </div>
     </div>
