--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
               <p style="text-align:right;margin-top:.8em">
                 Komito is subject to the terms and conditions of
                 <a href="http://www.apache.org/licenses/LICENSE-2.0"
-                  title="Apache License">Apache License 2.0</a>
+                   rel="nofollow"
+                   title="Apache License">Apache License 2.0</a>
                 <br>© 2015 <a href="http://dtm.io"
                   title="Datamart Inc.">Datamart Inc.</a>
               </p>
