--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="dtm-cell-body">
             <h1>Komito at a Glance</h1>
             <p class="txt-desc">
-              Komito is an enhancement for the most popular analytics software.
+              Komito is an enhancement for the most popular analytics software.<br>
               It unlocks power of digital analytics with additional insights
               about visitor's behavior.
             </p>
@@ -100,7 +100,7 @@
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
             <p class="txt-desc" style="text-align:center">
-              • Caring about privacy and security, the Komito
+              • Caring about privacy and security, Komito
               <b>does not store</b> any data.
             </p>
           </div>
