--- a/integration/index.html
+++ b/integration/index.html
@@ -54,16 +54,16 @@
         <div class="dtm-cell-body">
           <h1>Integration of Komito</h1>
 
-          <p>In order to install Komito on your website simply add a line of code just before closing <code>&lt;/body&gt;</code> tag:</p>
+          <p>Adding Komito to your website is easy &ndash; just place this code below, ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
           <code><pre>&lt;script src="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"&gt;&lt;/script&gt;</pre></code>
 
           <h3>Default Komito configuration:</h3>
           <code><pre>
   &lt;script&gt;
     <b>var</b> _komito = _komito || {
-      'trackTwitter': 1,   // Tracks Twitter events if widget presents on page.
-      'trackFacebook': 1,  // Tracks Facebook events if widget presents on page.
-      'trackLinkedIn': 1,  // Tracks LinkedIn events if plugin presents on page.
+      'trackTwitter': 1,   // Tracks Twitter events if widget is presented on page.
+      'trackFacebook': 1,  // Tracks Facebook events if widget is presented on page.
+      'trackLinkedIn': 1,  // Tracks LinkedIn events if plugin is presented on page.
       'trackDownloads': 1, // Tracks files download links.
       'trackOutbound': 1,  // Tracks outbound links.
       'trackForms': 1,     // Tracks forms submissions.
@@ -127,9 +127,9 @@
             <div>
               • <samp>trackOutbound</samp> Tracks all outbound links.
             </div>
-            <div><br><i>Note:</i> Recognizes outbound links to social networks
+            <div><br>Komito recognizes outbound links to social networks
               and lists those in the social report as well.</div>
-            <div><i>Social networks:</i> Google+, Blogger, Facebook, Twitter,
+            <div><i>Supported social networks:</i> Google+, Blogger, Facebook, Twitter,
               LinkedIn, MySpace, VKontakte, Odnoklassniki, Xing, YouTube, Twoo,
               Reddit, Pinterest, Digg, Foursquare.
             </div>
@@ -139,7 +139,7 @@
 
             <h4>Logged in Users</h4>
             <div>• <samp>trackUsers</samp> Tracks users logged in to social networks.</div>
-            <div><i>Social networks:</i> Facebook, Google+, Twitter.</div>
+            <div><i>Supported social networks:</i> Facebook, Google+, Twitter.</div>
 
             <h4>Call to action links</h4>
             <div>• <samp>trackActions</samp> Tracks CTA links (mailto, tel, sms, skype, etc).</div>
