--- a/integration/index.html
+++ b/integration/index.html
@@ -19,7 +19,7 @@
 <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
 <link href="/Komito/styles.css" rel="stylesheet">
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
-<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]--> 
+<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
 </head>
 <body class="dtm-page-komito dtm-product">
 <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
@@ -54,8 +54,11 @@
         <div class="dtm-cell-body">
           <h1>Integration of Komito</h1>
 
-          <p>Adding Komito to your website is easy &ndash; just place this code below, ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
-          <code><pre>&lt;script src="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"&gt;&lt;/script&gt;</pre></code>
+          <p>
+            Adding Komito to your website is easy – just place this code below,
+            ideally right before the closing <code>&lt;/body&gt;</code> tag:
+          </p>
+          <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
 
           <h3>Default Komito configuration:</h3>
           <code><pre>
