--- a/integration/index.html
+++ b/integration/index.html
@@ -62,22 +62,22 @@
 
           <h3>Default Komito configuration:</h3>
           <code><pre>
-  &lt;script&gt;
-    <b>var</b> _komito = _komito || {
-      'trackTwitter': 1,   // Tracks Twitter events if widget is presented on page.
-      'trackFacebook': 1,  // Tracks Facebook events if widget is presented on page.
-      'trackLinkedIn': 1,  // Tracks LinkedIn events if plugin is presented on page.
-      'trackDownloads': 1, // Tracks files download links.
-      'trackOutbound': 1,  // Tracks outbound links.
-      'trackForms': 1,     // Tracks forms submissions.
-      'trackUsers': 1,     // Tracks users logged in to social networks.
-      'trackActions': 1,   // Tracks 'mailto', 'tel', 'sms' and 'skype' actions.
-      'trackPrint': 1,     // Tracks page print actions.
-      'trackMedia': 1,     // Tracks HTML5 video, audio and YouTube players events.
-      'trackScroll': 1,    // Tracks scroll depth.
-      'debugMode': 0       // Prints all requests to console.
+  <span class="tag">&lt;script&gt;</span>
+    <span class="kwd">var</span> _komito = _komito || {
+      <span class="str">'trackTwitter'</span>: 1,   <span class="com">// Tracks Twitter events if widget is presented on page.<span>
+      <span class="str">'trackFacebook'</span>: 1,  <span class="com">// Tracks Facebook events if widget is presented on page.</span>
+      <span class="str">'trackLinkedIn'</span>: 1,  <span class="com">// Tracks LinkedIn events if plugin is presented on page.</span>
+      <span class="str">'trackDownloads'</span>: 1, <span class="com">// Tracks files download links.</span>
+      <span class="str">'trackOutbound'</span>: 1,  <span class="com">// Tracks outbound links.</span>
+      <span class="str">'trackForms'</span>: 1,     <span class="com">// Tracks forms submissions.</span>
+      <span class="str">'trackUsers'</span>: 1,     <span class="com">// Tracks users logged in to social networks.</span>
+      <span class="str">'trackActions</span>': 1,   <span class="com">// Tracks 'mailto', 'tel', 'sms' and 'skype' actions.</span>
+      <span class="str">'trackPrint'</span>: 1,     <span class="com">// Tracks page print actions.</span>
+      <span class="str">'trackMedia'</span>: 1,     <span class="com">// Tracks HTML5 video, audio and YouTube players events.</span>
+      <span class="str">'trackScroll'</span>: 1,    <span class="com">// Tracks scroll depth.</span>
+      <span class="str">'debugMode'</span>: 0       <span class="com">// Prints all requests to console.</span>
     };
-  &lt;/script&gt;</pre></code>
+  <span class="tag">&lt;/script&gt;</span></pre></code>
 
           <h3 id="features">Komito configuration parameters:</h3>
             <h4>Social Interaction:</h4>
