--- a/integration/index.html
+++ b/integration/index.html
@@ -64,7 +64,7 @@
           <code><pre>
   <span class="tag">&lt;script&gt;</span>
     <span class="kwd">var</span> _komito = _komito || {
-      <span class="str">'trackTwitter'</span>: 1,   <span class="com">// Tracks Twitter events if widget is presented on page.<span>
+      <span class="str">'trackTwitter'</span>: 1,   <span class="com">// Tracks Twitter events if widget is presented on page.</span>
       <span class="str">'trackFacebook'</span>: 1,  <span class="com">// Tracks Facebook events if widget is presented on page.</span>
       <span class="str">'trackLinkedIn'</span>: 1,  <span class="com">// Tracks LinkedIn events if plugin is presented on page.</span>
       <span class="str">'trackDownloads'</span>: 1, <span class="com">// Tracks files download links.</span>
