--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
 <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
 </head>
 <body class="dtm-page-komito dtm-product">
+<script>
+window.fbAsyncInit=function() {
+  FB.init({appId:'367159160142267',xfbml:true,version:'v2.3'});
+};
+
+(function(d,s,id){
+  var js,fjs=d.getElementsByTagName(s)[0];
+  if(!d.getElementById(id)) {
+    js=d.createElement(s);js.id=id;
+    js.src="//connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js,fjs);
+  }
+ }(document,'script','facebook-jssdk'));
+</script>
 <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
 <div class="dtm-grid">
   <div class="dtm-grid-row dtm-header">
