--- a/integration/index.html
+++ b/integration/index.html
@@ -164,6 +164,7 @@
       <div class="dtm-grid-cell cell-span8 cell-offset2">
         <a title="Get Komito Source Code."
            class="dtm-button clr-red"
+           target="_blank"
            href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Source Code</span></a>
       </div>
     </div>
