--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="dtm-page-komito dtm-product">
 <script>
 window.fbAsyncInit=function() {
-  FB.init({appId:'367159160142267',xfbml:true,version:'v2.3'});
+  FB.init({appId:'367159160142267',xfbml:true,version:'v2.3',status:true});
 };
 
 (function(d,s,id){
