--- a/demo/index.html
+++ b/demo/index.html
@@ -108,8 +108,8 @@ s.tl = function(lnk, linkType, linkName) {
   <legend>Facebook Buttons</legend>
   <div id="fb-root"></div>
   <script type="text/javascript" id="facebook-jssdk"
-          src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.1&amp;appId=537758096356571&amp;status=1&amp;cookie=1">
-  </script><!-- appId=367159160142267 -->
+          src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.1&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
+  </script>
   <div class="fb-like" data-href="http://datamart.github.io/Komito/"
        data-layout="button" data-action="like" data-show-faces="false"
        data-share="false"></div>
