updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" itemscope
+      itemtype="http://schema.org/WebPage">
 <head>
-<script>var _komito = {debugMode: 1};</script>
+<title itemprop="name">Komito at a Glance</title>
+<meta name="og:title" content="Komito at a Glance">
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+<meta name="description" content="Komito is an enhancement for the most popular analytics software.">
+<meta name="og:description" content="Komito is an enhancement for the most popular analytics software.">
+<meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
+<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@vpodk">
+<meta name="twitter:url" content="http://datamart.github.io/Komito/">
+<meta itemprop="url" content="http://datamart.github.io/Komito/">
+<link rel="canonical" href="http://datamart.github.io/Komito/">
+<link href="/Komito/favicon.ico" rel="shortcut icon">
+<link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
+<link href="/Komito/styles.css" rel="stylesheet">
+<!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
+<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
 </head>
 <body>
+
+<h3>For more info please open dev console.</h3>
 
 <script>
 // Emulating GA Classic.
@@ -43,11 +63,11 @@ s.tl = function(lnk, linkType, linkName) {
 <fieldset>
   <legend>Outbound Links</legend>
   <a href="http://dtm.io/">Datamart</a>
-  &nbsp; <a target="_blank" href="http://www.linkedin.com/company/datamartinc">LinkedIn</a>
-  &nbsp; <a target="_blank" href="https://plus.google.com/+GoogleAnalytics/posts">Google+</a>
-  &nbsp; <a target="_blank" href="https://www.facebook.com/datamartinc">Facebook</a>
-  &nbsp; <a target="_blank" href="http://analytics.blogspot.com/">Blogger</a>
-  &nbsp; <a target="_blank" href="https://twitter.com/vpodk">Twitter</a>
+  &nbsp; <a target="_blank" href="//www.linkedin.com/company/datamartinc">LinkedIn</a>
+  &nbsp; <a target="_blank" href="//www.facebook.com/datamartinc">Facebook</a>
+  &nbsp; <a target="_blank" href="//plus.google.com/+ValentinP">Google+</a>
+  &nbsp; <a target="_blank" href="//twitter.com/vpodk">Twitter</a>
+  &nbsp; <a target="_blank" href="//analytics.blogspot.com/">Blogger</a>
 </fieldset>
 <div>&nbsp;</div>
 
@@ -137,6 +157,8 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
 </script>
+
+<script>var _komito = {debugMode: 1};</script>
 <script src="//datamart.github.io/Komito/komito.js"></script>
 </body>
 </html>
