updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,8 @@
     </div>
   </div>
 
+  <div class="dtm-grid">
+    <div class="dtm-content">
 
 
 
@@ -179,6 +181,9 @@ s.tl = function(lnk, linkType, linkName) {
        data-layout="button" data-show-faces="false"></div>
 </fieldset>
 <div>&nbsp;</div>
+
+    </div><!--/dtm-content-->
+  </div><!--/dtm-grid-->
 
   <div class="dtm-grid-row dtm-footer">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
