updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,7 +52,9 @@
 
   <div class="dtm-grid">
     <div class="dtm-content">
-
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span8 cell-offset2">
+          <div class="dtm-cell-body">
 
 
 <h3>For more info please open dev console.</h3>
@@ -182,6 +184,9 @@ s.tl = function(lnk, linkType, linkName) {
 </fieldset>
 <div>&nbsp;</div>
 
+          </div><!--/dtm-cell-body-->
+        </div><!--/dtm-grid-cell-->
+      </div><!--/dtm-grid-row-->
     </div><!--/dtm-content-->
   </div><!--/dtm-grid-->
 
