--- a/demo/index.html
+++ b/demo/index.html
@@ -131,11 +131,23 @@ s.tl = function(lnk, linkType, linkName) {
 
 <fieldset>
   <legend>Forms</legend>
-  <form name="registration-form" onsubmit="return false">
-    <label>Name: <input name="name" value="name"></label><br>
-    <label>Age: <select name="age"><option value="20">20</option></select></label><br>
-    <textarea name="comment">comment</textarea><br>
-    <button type="submit">Submit</button>
+  <form name="registration-form" onsubmit="return false" class="dtm-form">
+    <div class="dtm-form-item">
+      <label>Name:</label>
+      <input name="name" value="name">
+    </div>
+    <div class="dtm-form-item">
+      <label>Age:</label>
+      <div class="dtm-select">
+        <select name="age"><option value="20">20</option></select>
+      </div>
+    </div>
+    <div class="dtm-form-item">
+      <textarea name="comment">comment</textarea>
+    </div>
+    <div class="dtm-form-item">
+      <button type="submit">Submit</button>
+    </div>
   </form>
 </fieldset>
 <div>&nbsp;</div>
