updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -134,7 +134,7 @@ s.tl = function(lnk, linkType, linkName) {
   <form name="registration-form" onsubmit="return false" class="dtm-form">
     <div class="dtm-form-item">
       <label>Name:</label>
-      <input name="name" value="name">
+      <input name="name" value="name" type="text">
     </div>
     <div class="dtm-form-item">
       <label>Age:</label>
