updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -146,7 +146,7 @@ s.tl = function(lnk, linkType, linkName) {
       <textarea name="comment">comment</textarea>
     </div>
     <div class="dtm-form-item">
-      <button type="submit" class="dtm-button clr-red">Submit</button>
+      <button type="submit" class="dtm-button clr-red"><span>Submit</span></button>
     </div>
   </form>
 </fieldset>
