updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,12 +52,45 @@
 
   <div class="dtm-grid">
     <div class="dtm-content">
+
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span8 cell-offset2">
+          <div class="dtm-cell-body">
+            <p class="txt-desc">For more info please open dev console.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset2">
+          <div class="dtm-cell-body">
+            <h2>Outbound Links</h2>
+            <p>Clicking on links "Outbound" event will be dispatched.</p>
+            <p>If link is a Social Network, "Social" event will be dispatched too.</p>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span4">
+          <div class="dtm-cell-body">
+            <ul>
+              <li><a href="http://dtm.io/">Datamart</a></li>
+              <li><a target="_blank" href="//www.linkedin.com/company/datamartinc">LinkedIn</a></li>
+              <li><a target="_blank" href="//www.facebook.com/datamartinc">Facebook</a></li>
+              <li><a target="_blank" href="//plus.google.com/+ValentinP">Google+</a></li>
+              <li><a target="_blank" href="//twitter.com/vpodk">Twitter</a></li>
+              <li><a target="_blank" href="//analytics.blogspot.com/">Blogger</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
 
-
-<h3>For more info please open dev console.</h3>
+<fieldset>
+  <legend>Outbound Links</legend>
+</fieldset>
+<div>&nbsp;</div>
 
 <script>
 // Emulating GA Classic.
@@ -93,17 +126,6 @@ s.tl = function(lnk, linkType, linkName) {
   console.log('Adobe TagLoader', s);
 };
 </script>
-
-<fieldset>
-  <legend>Outbound Links</legend>
-  <a href="http://dtm.io/">Datamart</a>
-  &nbsp; <a target="_blank" href="//www.linkedin.com/company/datamartinc">LinkedIn</a>
-  &nbsp; <a target="_blank" href="//www.facebook.com/datamartinc">Facebook</a>
-  &nbsp; <a target="_blank" href="//plus.google.com/+ValentinP">Google+</a>
-  &nbsp; <a target="_blank" href="//twitter.com/vpodk">Twitter</a>
-  &nbsp; <a target="_blank" href="//analytics.blogspot.com/">Blogger</a>
-</fieldset>
-<div>&nbsp;</div>
 
 <fieldset>
   <legend>Download Links</legend>
