updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -64,9 +64,9 @@
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
-            <h2>Outbound Links</h2>
-            <p>Clicking on links "Outbound" event will be dispatched.</p>
-            <p>If link is a Social Network, "Social" event will be dispatched too.</p>
+            <h4>Outbound Links</h4>
+            <div>Clicking on links "Outbound" event will be dispatched.</div>
+            <div>If link is a Social Network, "Social" event will be dispatched too.</div>
           </div>
         </div>
         <div class="dtm-grid-cell cell-span4">
