updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -83,6 +83,26 @@
         </div>
       </div>
 
+
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset2">
+          <div class="dtm-cell-body">
+            <h4>Download Links</h4>
+            <div>Clicking on links "Download" event will be dispatched.</div>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span4">
+          <div class="dtm-cell-body">
+            <ul>
+              <li><a target="_blank"
+     href="http://dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf">Datamart-WebAnalytics-CaseStudy.pdf</a></li>
+              <li><a target="_blank"
+     href="http://dl.google.com/closure-compiler/compiler-latest.zip">Google-Closure-Compiler.zip</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
@@ -121,16 +141,6 @@ s.tl = function(lnk, linkType, linkName) {
   console.log('Adobe TagLoader', s);
 };
 </script>
-
-<fieldset>
-  <legend>Download Links</legend>
-  <a target="_blank"
-     href="http://dtm.io/case-studies/files/Datamart-Automotive_CaseStudy.pdf">Datamart-Automotive-CaseStudy.pdf</a>
-  &nbsp;
-  <a target="_blank"
-     href="http://dl.google.com/closure-compiler/compiler-latest.zip">Google-Closure-Compiler.zip</a>
-</fieldset>
-<div>&nbsp;</div>
 
 <fieldset>
   <legend>Call To Action Links</legend>
