updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -72,7 +72,7 @@
         <div class="dtm-grid-cell cell-span4">
           <div class="dtm-cell-body">
             <ul>
-              <li><a href="http://dtm.io/">Datamart</a></li>
+              <li><a target="_blank" href="http://dtm.io/">Datamart</a></li>
               <li><a target="_blank" href="//www.linkedin.com/company/datamartinc">LinkedIn</a></li>
               <li><a target="_blank" href="//www.facebook.com/datamartinc">Facebook</a></li>
               <li><a target="_blank" href="//plus.google.com/+ValentinP">Google+</a></li>
@@ -82,7 +82,6 @@
           </div>
         </div>
       </div>
-
 
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
@@ -98,6 +97,26 @@
      href="http://dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf">Datamart-WebAnalytics-CaseStudy.pdf</a></li>
               <li><a target="_blank"
      href="http://dl.google.com/closure-compiler/compiler-latest.zip">Google-Closure-Compiler.zip</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset2">
+          <div class="dtm-cell-body">
+            <h4>Call To Action Links</h4>
+            <div>Clicking on links "CTA" event will be dispatched.</div>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span4">
+          <div class="dtm-cell-body">
+            <ul>
+              <li><a href="mailto:hr@dtm.io">mailto:hr@dtm.io</a></li>
+              <li><a href="mailto:komito-support@dtm.io?subject=Support">mailto:komito-support@dtm.io?subject=Support</a></li>
+              <li><a href="tel:+14157997500">tel:+14157997500</a></li>
+              <li><a href="sms:+14157997500">sms:+14157997500</a></li>
+              <li><a href="skype:datamart.company?call">skype:datamart.company?call</a></li>
             </ul>
           </div>
         </div>
@@ -141,20 +160,6 @@ s.tl = function(lnk, linkType, linkName) {
   console.log('Adobe TagLoader', s);
 };
 </script>
-
-<fieldset>
-  <legend>Call To Action Links</legend>
-  <a href="mailto:hr@dtm.io">mailto:hr@dtm.io</a>
-  &nbsp;
-  <a href="mailto:komito-support@dtm.io?subject=Support">mailto:komito-support@dtm.io?subject=Support</a>
-  &nbsp;
-  <a href="tel:+14157997500">tel:+14157997500</a>
-  &nbsp;
-  <a href="sms:+14157997500">sms:+14157997500</a>
-  &nbsp;
-  <a href="skype:datamart.company?call">skype:datamart.company?call</a>
-</fieldset>
-<div>&nbsp;</div>
 
 <fieldset>
   <legend>Forms</legend>
